packages/kotlin/ttrp-graph/src/test/resources/fixtures/graph/neg/ff-control.ttrp
// expect: TTRP-CTL-001
uses world "acme.worlds.dev"
container a target erp_pg """sql
    select 1
"""
container b target erp_pg """sql
    select 2
"""
a finishes with b
